fix: now-indicator overlap with event card

--- a/src/components/Calendar/styles/default/time-grid.scss
+++ b/src/components/Calendar/styles/default/time-grid.scss
@@ -134,7 +134,9 @@
 
 .rbc-current-time-indicator {
     position: absolute;
-    z-index: 3;
+
+    // prevent overlap with event card
+    // z-index: 3;
     left: 0;
     right: 0;
     height: 1px;
